# komodo-defi-framework

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yaml  rust-toolchain.toml
.cargo/: config.toml
.docker/: Dockerfile.solana  Dockerfile.solana-tests  docker-compose.yaml
.docker/container-state/nucleus-testnet-data/config/: app.toml
.docker/solana-accounts/: iguana  mint.sh  token_m_a.json  user1.json  user2.json  user3.json  user4_TijN.json  user5_v54e.json
.github/actions/deps-install/: action.yml
.github/workflows/: dev-build.yml  fmt-and-lint.yml  linux-x86_64.yml  main.yml  no-docker.yml-main.yml  release-build.yml  test.yml  validate-cargo-lock.yml
mm2src/adex_cli/src/: cli.rs
mm2src/coins/: Cargo.toml  coin_balance.rs  coin_errors.rs  eth.rs  hd_pubkey.rs  lightning.rs  lp_coins.rs  lp_price.rs  my_tx_history_v2.rs  nft.rs  qrc20.rs  sia.rs  siacoin.rs  solana.rs  test_coin.rs  utxo.rs  z_coin.rs
mm2src/coins/eth/: eth_balance_events.rs  eth_swap_v2.rs  eth_tests.rs  eth_wasm_tests.rs  eth_withdraw.rs  for_tests.rs  maker_swap_v2_abi.json  nft_maker_swap_v2_contract_abi.json  swap_v2_contract_abi.json  taker_swap_v2_abi.json  v2_activation.rs  wallet_connect.rs
mm2src/coins/eth/eth_swap_v2/: eth_maker_swap_v2.rs  eth_taker_swap_v2.rs  mod.rs
mm2src/coins/eth/fee_estimation/: eth_fee_events.rs  rpc.rs
mm2src/coins/eth/nft_swap_v2/: errors.rs  mod.rs
mm2src/coins/eth/web3_transport/: http_transport.rs  mod.rs  websocket_transport.rs
mm2src/coins/hd_wallet/: mod.rs  pubkey.rs
mm2src/coins/hd_wallet/storage/: mock_storage.rs  (+3 more)
mm2src/coins/hd_wallet_storage/: mod.rs  wasm_storage.rs
mm2src/coins/lightning/: ln_errors.rs  ln_events.rs  ln_platform.rs  ln_utils.rs
mm2src/coins/nft/: nft_errors.rs  nft_structs.rs  nft_tests.rs
mm2src/coins/qrc20/: history.rs  qrc20_tests.rs  rpc_clients.rs  swap.rs
mm2src/coins/rpc_command/: mod.rs
mm2src/coins/sia/: Cargo.toml  address.rs  blake2b_internal.rs  encoding.rs  http_client.rs  http_endpoints.rs  signature.rs  specifier.rs  spend_policy.rs  transaction.rs  types.rs
mm2src/coins/sia/src/: blake2b_internal.rs  encoding.rs  http_client.rs  http_endpoints.rs  lib.rs  specifier.rs  spend_policy.rs  transaction.rs  types.rs
mm2src/coins/sia/src/tests/: encoding.rs  mod.rs  serde.rs  spend_policy.rs  transaction.rs
mm2src/coins/sia/tests/: encoding.rs  http_client.rs  mod.rs  serde.rs  spend_policy.rs
mm2src/coins/siacoin/: error.rs  sia_hd_wallet.rs  sia_withdraw.rs
mm2src/coins/solana/: solana_common.rs  solana_common_tests.rs  solana_tests.rs  spl.rs  spl_tests.rs
mm2src/coins/tendermint/: mod.rs  tendermint_balance_events.rs  tendermint_coin.rs  tendermint_token.rs  tendermint_tx_history_v2.rs  wallet_connect.rs
mm2src/coins/tx_history_storage/: mod.rs  sql_tx_history_storage_v2.rs  tx_history_v2_tests.rs
mm2src/coins/utxo/: bch.rs  qtum.rs  qtum_delegation.rs  rpc_clients.rs  slp.rs  utxo_balance_events.rs  utxo_common.rs  utxo_common_tests.rs  utxo_standard.rs  utxo_tests.rs  utxo_tx_history_v2.rs  utxo_wasm_tests.rs  utxo_withdraw.rs
mm2src/coins/z_coin/: storage.rs  tx_history_events.rs  z_balance_streaming.rs  z_coin_errors.rs  z_coin_native_tests.rs  z_coin_wasm_tests.rs  z_htlc.rs  z_rpc.rs  z_tx_history.rs
mm2src/coins_activation/: Cargo.toml
mm2src/coins_activation/src/: context.rs  erc20_token_activation.rs  eth_with_token_activation.rs  lib.rs  lightning_activation.rs  platform_coin_with_tokens.rs  prelude.rs  sia_coin_activation.rs  tendermint_with_assets_activation.rs
mm2src/common/: common.rs  expirable_entry.rs  time_cache.rs
mm2src/common/custom_futures/: repeatable.rs
mm2src/crypto/: Cargo.toml
mm2src/crypto/src/: crypto_ctx.rs  global_hd_ctx.rs  lib.rs  mnemonic.rs  secret_hash_algo.rs  shared_db_id.rs  standard_hd_path.rs
mm2src/db_common/src/: lib.rs
mm2src/derives/enum_derives/: Cargo.toml
mm2src/gossipsub/src/: behaviour.rs
mm2src/hw_common/: Cargo.toml
mm2src/hw_common/src/: primitives.rs
mm2src/kdf_walletconnect/: Cargo.toml
mm2src/kdf_walletconnect/src/: chain.rs  connection_handler.rs  error.rs  handler.rs  inbound_message.rs  lib.rs  metadata.rs  pairing.rs  session.rs  session_key.rs
mm2src/kdf_walletconnect/src/chain/: cosmos.rs  mod.rs  tendermint.rs
mm2src/kdf_walletconnect/src/rpc_commands/: delete_connection.rs  get_chain_id.rs  get_session.rs  mod.rs  new_connection.rs  ping.rs
mm2src/kdf_walletconnect/src/session/: delete.rs  event.rs  extend.rs  key.rs  mod.rs  ping.rs  propose.rs  settle.rs  update.rs
mm2src/kdf_walletconnect/src/session/rpc/: delete.rs  event.rs  extend.rs  mod.rs  ping.rs  propose.rs  settle.rs  update.rs
mm2src/kdf_walletconnect/src/storage/: indexed_db.rs  mod.rs  sqlite.rs  wasm.rs
mm2src/kdf_wc_client/: Cargo.toml
mm2src/mm2_bin_lib/: Cargo.toml
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_core/src/: data_asker.rs  lib.rs  mm_ctx.rs  sql_connection_pool.rs  sql_ctx.rs
mm2src/mm2_db/: Cargo.toml
mm2src/mm2_eth/: Cargo.toml
mm2src/mm2_event_stream/src/: event.rs  manager.rs  streamer.rs
mm2src/mm2_gui_storage/src/: context.rs  lib.rs  rpc_commands.rs
mm2src/mm2_main/: Cargo.toml
mm2src/mm2_main/src/: database.rs  lp_healthcheck.rs  lp_native_dex.rs  lp_network.rs  lp_ordermatch.rs  lp_stats.rs  lp_swap.rs  lp_wallet.rs  mm2.rs  ordermatch_tests.rs  rpc.rs
mm2src/mm2_main/tests/: docker_tests_main.rs  docker_tests_sia_unique.rs
mm2src/mm2_net/: Cargo.toml
mm2src/mm2_net/src/: is_peer_connected_rpc.rs  lib.rs  native_http.rs  peer_connection_healthcheck.rs  transport.rs
mm2src/mm2_number/: Cargo.toml
mm2src/mm2_p2p/: Cargo.toml
mm2src/mm2_p2p/src/: lib.rs
mm2src/mm2_state_machine/src/: storable_state_machine.rs
mm2src/mm2_test_helpers/contract_bytes/: erc20_token_bytes  taker_swap_v2_bytes
mm2src/mm2_test_helpers/src/: for_tests.rs  lib.rs
mm2src/time_structures_benchmark/: Cargo.toml
mm2src/time_structures_benchmark/benches/: timed_structures.rs
mm2src/trezor/: Cargo.toml
mm2src/trezor/src/: error.rs
scripts/ci/: solana-entrypoint.sh
(+137 files in other folders)
