[package]
name = "kdf_walletconnect"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
base64 = "0.21.2"
chrono = { version = "0.4.23", "features" = ["serde"] }
common = { path = "../common" }
db_common = { path = "../db_common" }
derive_more = "0.99"
enum_derives = { path = "../derives/enum_derives" }
futures = { version = "0.3", package = "futures", features = [
    "compat",
    "async-await",
] }
hex = "0.4.2"
hkdf = "0.12.4"
mm2_core = { path = "../mm2_core" }
mm2_db = { path = "../mm2_db" }
mm2_err_handle = { path = "../mm2_err_handle" }
pairing_api = { path = "../../../kdf-wc/pairing_api" }
rand = "0.8"
relay_client = { path = "../../../kdf-wc/relay_client" }
relay_rpc = { path = "../../../kdf-wc/relay_rpc" }
sha2 = "0.10.8"
thiserror = "1.0.40"
wc_common = { path = "../../../kdf-wc/wc_common" }
secp256k1 = { version = "0.20" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
mm2_db = { path = "../mm2_db" }
