[package]
name = "time_structures_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
timed-map = { git = "https://github.com/ozmann-industries/timed-map", rev = "ffb68a3ebce420ca70a8d2ee4d9aa715b088d456", features = ["std", "rustc-hash"] }
common = { path = "../common" }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "timed_structures"
harness = false